src/test/ui/nll/relate_tys/hr-fn-aau-eq-abu.stderr
error[E0308]: mismatched types
  --> $DIR/hr-fn-aau-eq-abu.rs:16:53
   |
LL |     let a: Cell<for<'a, 'b> fn(&'a u32, &'b u32)> = make_cell_aa();
   |            --------------------------------------   ^^^^^^^^^^^^^^ types differ
   |            |
   |            expected due to this
   |
   = note: expected struct `Cell<for<'a, 'b> fn(&'a u32, &'b u32)>`
              found struct `Cell<for<'a> fn(&'a u32, &'a u32)>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
